# FourierAnalyzer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: RenderWindow.hpp  Screen.hpp  Signal.hpp
include/screens/: DummyScreen.hpp  PlotScreen.hpp
src/: CMakeLists.txt  RenderWindow.cpp  Screen.cpp  Signal.cpp  main.cpp
src/screens/: DummyScreen.cpp  PlotScreen.cpp
